--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,9 @@
       <div class="px-6 py-24 sm:px-6 sm:py-32 lg:px-8">
 	<div class="mx-auto max-w-2xl text-center">
 	  <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Daisystant</h2>
-	  <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-600">A Firefox browser extension for Aiystant,<br>which displays textual differences between course versions</p>
+	  <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-600">Daisystant is a Firefox browser extension that displays textual differences between various versions of Aisystant courses</p>
 	  <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="daisystant-1.0.2.xpi" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install it into Firefox</a>
+            <a href="daisystant-1.0.2.xpi" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install it in Firefox</a>
 	  </div>
 	  <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-600">Latest release: 1.0.2, 30 March 2024</p>
 	</div>
