--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
             <a href="daisystant-1.0.2.xpi" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Install it in Firefox</a>
 	  </div>
 	  <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-600">Latest release: 1.0.2, 30 March 2024</p>
+	  <p class="mx-auto max-w-xl text-lg leading-8"><a href="https://github.com/dottedmag/daisystant" class="text-indigo-600 text-indigo-500">Source code</a></p>
 	</div>
       </div>
     </div>
